Version 1.5.7+svn:
 * Graphics:
   * Fixed drawing glitches in the listboxes.
   * Fixed a glitch which closed a new dialog on the mouse up event of the old
     dialog (the effect is percieved as the new dialog not showing up).
   * Spacebar closes the dialogs without a scrollbar again.
   * Pressing escape in a new dialog, behaves like in the old dialogs again.
   * new portrait for Royal Guard, Heavy Infantry
   * Fixed several glitches in with the listboxes and new portrait dialog.
 * Language and i18n:
   * updated translations: German, Hungarian, Italian, Japanese, Slovak,
     Spanish
 * Networking
   * ensure SDL Net initialized before attempting to send upload_log
 * WML engine:
   * add an "animate" key to the [teleport] event
   * add a resistance_anim block used whenever a unit uses a [resistance]
     ability on a neghbour
   * the animate_unit action can now animate multiple units
   * the animate_unit action can now change the direction the unit is facing
     with a SLF
 * Miscellaneous and bug fixes:
   * Added the sunset feature to the new dialogs.
   * Fix the calculate feature in the test scenario.
   * Fix an endian issue which rendered text wrong on big endian machines.
   * A backspace in a textbox with selection, now clears the selection.
   * Scrollwheel mouses can scroll the new listboxes.

Version 1.5.7:
 * Campaigns:
   * Descent into Darkness
     * Removed debris from this campaign's copy of the map of the
       Great Continent, and converted Parthyn's marker (which was black)
       to a brownish marker.
   * Eastern Invasion
     * Converted to the new gold carryover system.
     * Gave the undead flag to relevant sides.
     * Fixed Dacyn and Owaec not being loyal.
     * In 'Mal-Ravanal's Capital', reworked how the prisoner knights work: now
       they're placed on the map in cages with guards next to them, and the
       player must kill the guard to release the prisoner.